testdata/discovery/test-and-steps/01-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: test-1
spec:
  operations:
    - apply:
        - file: foo.yaml
      assert:
        - file: bar.yaml
