testdata/discovery/test-and-steps/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  skip: false
  concurrent: false
  steps: []
